--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,15 +1,6 @@
 <Project>
-  <PropertyGroup>
-    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-    <TargetFramework>net8.0</TargetFramework>
-    <AspNetVersion>8.0.0</AspNetVersion>
-    <SystemExtensionVersion>8.0.1</SystemExtensionVersion>
-    <EntityFrameworkCoreVersion>8.0.0</EntityFrameworkCoreVersion>
-    <VSCodeGeneratorVersion>9.0.0</VSCodeGeneratorVersion>
-  </PropertyGroup>
-
   <ItemGroup>
-    <!-- Ardalis -->
+    <!-- Ardalis packages -->
     <PackageVersion Include="Ardalis.ApiEndpoints" Version="4.1.0" />
     <PackageVersion Include="Ardalis.GuardClauses" Version="4.5.0" />
     <PackageVersion Include="Ardalis.Specification.EntityFrameworkCore" Version="8.0.0" />
@@ -17,7 +8,7 @@
     <PackageVersion Include="Ardalis.Specification" Version="8.0.0" />
     <PackageVersion Include="Ardalis.ListStartupServices" Version="1.1.4" />
 
-    <!-- Azure -->
+    <!-- Azure packages -->
     <PackageVersion Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.2" />
     <PackageVersion Include="Azure.Identity" Version="1.13.2" />
 
@@ -28,16 +19,16 @@
     <PackageVersion Include="BlazorInputFile" Version="0.2.0" />
     <PackageVersion Include="Blazored.LocalStorage" Version="4.5.0" />
 
-    <!-- Build Tools -->
+    <!-- Build tools -->
     <PackageVersion Include="BuildBundlerMinifier" Version="3.2.449" PrivateAssets="All" />
 
-    <!-- FluentValidation -->
+    <!-- Validation -->
     <PackageVersion Include="FluentValidation" Version="11.10.0" />
 
     <!-- MediatR -->
     <PackageVersion Include="MediatR" Version="12.5.0" />
 
-    <!-- ASP.NET Core -->
+    <!-- ASP.NET Core packages -->
     <PackageVersion Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.11" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.13" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.10" PrivateAssets="all" />
@@ -48,28 +39,35 @@
     <PackageVersion Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.12" />
     <PackageVersion Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.10" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-    
-    <!-- Microsoft Extensions (centralized) -->
-    <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Caching.Memory" Version="8.0.9" />
-    <PackageVersion Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
+
+    <!-- Extensions -->
     <PackageVersion Include="Microsoft.Extensions.Identity.Core" Version="8.0.10" />
-    <PackageVersion Include="Microsoft.Extensions.Logging.Configuration" Version="$(SystemExtensionVersion)" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Configuration" Version="8.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Caching.Memory" Version="9.0.9" />
+    <PackageVersion Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.0" />
 
     <!-- EF Core -->
     <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.4">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageVersion>
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.4" PrivateAssets="all" />
 
-    <!-- Feature Management -->
+    <!-- Feature management -->
     <PackageVersion Include="Microsoft.FeatureManagement.AspNetCore" Version="4.0.0" />
     <PackageVersion Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="8.0.0" />
 
-    <!-- Test Packages -->
+    <!-- Web tooling -->
+    <PackageVersion Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.Web.LibraryManager.Build" Version="3.0.71" />
+
+    <!-- Minimal API -->
+    <PackageVersion Include="MinimalApi.Endpoint" Version="1.3.0" />
+
+    <!-- Testing -->
+    <PackageVersion Include="Moq" Version="4.20.70" />
+    <PackageVersion Include="NSubstitute" Version="5.1.0" />
+    <PackageVersion Include="NSubstitute.Analyzers.CSharp" Version="1.0.17" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.8" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageVersion Include="xunit" Version="2.9.2" />
@@ -79,20 +77,15 @@
     <PackageVersion Include="MSTest.TestFramework" Version="3.6.2" />
     <PackageVersion Include="coverlet.collector" Version="6.0.2" />
 
-    <!-- Additional -->
-    <PackageVersion Include="Moq" Version="4.20.70" />
-    <PackageVersion Include="NSubstitute" Version="5.1.0" />
-    <PackageVersion Include="NSubstitute.Analyzers.CSharp" Version="1.0.17" />
-    <PackageVersion Include="System.Net.Http.Json" Version="$(SystemExtensionVersion)" />
+    <!-- System -->
+    <PackageVersion Include="System.Net.Http.Json" Version="8.0.1" />
     <PackageVersion Include="System.Security.Claims" Version="4.3.0" />
     <PackageVersion Include="System.Text.Json" Version="9.0.4" />
+    <PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="8.1.1" />
+
+    <!-- Swagger -->
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.8.1" />
     <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerUI" Version="7.3.1" />
     <PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="7.2.0" />
-    <PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="8.1.1" />
-    <PackageVersion Include="MinimalApi.Endpoint" Version="1.3.0" />
-    <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
-    <PackageVersion Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="$(VSCodeGeneratorVersion)" />
-    <PackageVersion Include="Microsoft.Web.LibraryManager.Build" Version="3.0.71" />
   </ItemGroup>
 </Project>
