--- a/src/BlazorAdmin/BlazorAdmin.csproj
+++ b/src/BlazorAdmin/BlazorAdmin.csproj
@@ -1,30 +1,35 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">	
-	<ItemGroup>
-		<PackageReference Include="Blazored.LocalStorage" />
-		<PackageReference Include="BlazorInputFile" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" />		
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" />
-		<PackageReference Include="Microsoft.Extensions.Identity.Core" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Configuration" />
-		<PackageReference Include="System.Net.Http.Json" />
-	</ItemGroup>
+<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">	
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <!-- Disable trimming for now to avoid NETSDK1124 errors -->
+    <PublishTrimmed>false</PublishTrimmed>
+  </PropertyGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\BlazorShared\BlazorShared.csproj" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Blazored.LocalStorage" />
+    <PackageReference Include="BlazorInputFile" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" />		
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Configuration" />
+    <PackageReference Include="System.Net.Http.Json" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<Compile Update="Services\CatalogItem\Delete.EditCatalogItemResult.cs">
-			<DependentUpon>Delete.cs</DependentUpon>
-		</Compile>
-		<Compile Update="Services\CatalogItem\GetById.EditCatalogItemResult.cs">
-			<DependentUpon>GetById.cs</DependentUpon>
-		</Compile>
-		<Compile Update="Services\CatalogItem\Edit.CreateCatalogItemResult.cs">
-			<DependentUpon>Edit.cs</DependentUpon>
-		</Compile>
-	</ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorShared\BlazorShared.csproj" />
+  </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Services\CatalogItem\Delete.EditCatalogItemResult.cs">
+      <DependentUpon>Delete.cs</DependentUpon>
+    </Compile>
+    <Compile Update="Services\CatalogItem\GetById.EditCatalogItemResult.cs">
+      <DependentUpon>GetById.cs</DependentUpon>
+    </Compile>
+    <Compile Update="Services\CatalogItem\Edit.CreateCatalogItemResult.cs">
+      <DependentUpon>Edit.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
 </Project>
