--- a/src/ApplicationCore/ApplicationCore.csproj
+++ b/src/ApplicationCore/ApplicationCore.csproj
@@ -2,7 +2,8 @@
 
 	<PropertyGroup>	
 		<RootNamespace>Microsoft.eShopWeb.ApplicationCore</RootNamespace>
-		<Nullable>enable</Nullable>
+		<TargetFramework>net8.0</TargetFramework>
+    <Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
