--- a/.github/workflows/eShopOnWeb.yml
+++ b/.github/workflows/eShopOnWeb.yml
@@ -1,119 +1,21 @@
-name: eShopOnWeb Build and Deploy
+<Project Sdk="Microsoft.NET.Sdk">
 
-on:
-  workflow_dispatch:
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+  </PropertyGroup>
 
-env:
-  RESOURCE_GROUP: rg-eshoponweb-westeurope
-  LOCATION: westeurope
-  TEMPLATE_FILE: infra/webapp.bicep
-  SUBSCRIPTION_ID: 03625f30-897d-40c1-922e-dac326960070
-  WEBAPP_NAME: devops-webapp-westeurope-143752838
+  <ItemGroup>
+    <PackageReference Include="Ardalis.Specification" Version="6.1.0" />
+    <PackageReference Include="Ardalis.GuardClauses" Version="4.5.0" />
+    <PackageReference Include="Ardalis.Result" Version="9.1.0" />
+    <PackageReference Include="System.Text.Json" Version="8.0.0" />
+    <PackageReference Include="System.Security.Claims" Version="4.3.0" />
+  </ItemGroup>
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorShared\BlazorShared.csproj" />
+  </ItemGroup>
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: 8.0.x
-
-      - name: Clear NuGet cache
-        run: dotnet nuget locals all --clear
-
-      - name: Fix critical package conflicts
-        run: |
-          # Add explicit System.Text.Json reference to ApplicationCore
-          if ! grep -q "System.Text.Json" ./src/ApplicationCore/ApplicationCore.csproj; then
-            sed -i '/<\/ItemGroup>/i \    <PackageReference Include="System.Text.Json" Version="8.0.0" />' ./src/ApplicationCore/ApplicationCore.csproj
-          fi
-          
-          # Update Azure.Identity in Web project
-          sed -i 's/Azure.Identity" Version="[^"]*"/Azure.Identity" Version="1.10.4"/' ./src/Web/Web.csproj || true
-          
-          # Update Ardalis.GuardClauses in ApplicationCore
-          sed -i 's/Ardalis.GuardClauses" Version="[^"]*"/Ardalis.GuardClauses" Version="4.5.0"/' ./src/ApplicationCore/ApplicationCore.csproj || true
-
-      - name: Restore core projects only
-        run: |
-          # Restore only the essential projects in dependency order
-          echo "Restoring BlazorShared..."
-          dotnet restore ./src/BlazorShared/BlazorShared.csproj --verbosity quiet || echo "BlazorShared restore completed with warnings"
-          
-          echo "Restoring ApplicationCore..."
-          dotnet restore ./src/ApplicationCore/ApplicationCore.csproj --verbosity quiet || echo "ApplicationCore restore completed with warnings"
-          
-          echo "Restoring Infrastructure..."
-          dotnet restore ./src/Infrastructure/Infrastructure.csproj --verbosity quiet || echo "Infrastructure restore completed with warnings"
-          
-          echo "Restoring BlazorAdmin..."
-          dotnet restore ./src/BlazorAdmin/BlazorAdmin.csproj --verbosity quiet || echo "BlazorAdmin restore completed with warnings"
-          
-          echo "Restoring Web..."
-          dotnet restore ./src/Web/Web.csproj --verbosity quiet || echo "Web restore completed with warnings"
-
-      - name: Build Web project
-        run: |
-          # Build dependencies first
-          echo "Building ApplicationCore..."
-          dotnet build ./src/ApplicationCore/ApplicationCore.csproj --configuration Release --no-restore --verbosity minimal || echo "ApplicationCore build completed with warnings"
-          
-          echo "Building Infrastructure..."
-          dotnet build ./src/Infrastructure/Infrastructure.csproj --configuration Release --no-restore --verbosity minimal || echo "Infrastructure build completed with warnings"
-          
-          echo "Building Web project..."
-          dotnet build ./src/Web/Web.csproj --configuration Release --no-restore --verbosity minimal || echo "Web build completed with warnings"
-
-      - name: Publish Web App
-        run: |
-          echo "Publishing Web project..."
-          dotnet publish ./src/Web/Web.csproj -c Release -o ./publish_output --no-build
-          cd ./publish_output
-          zip -r ../app.zip .
-          echo "Publish completed successfully"
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: webapp
-          path: app.zip
-
-      - name: Upload Bicep template
-        uses: actions/upload-artifact@v4
-        with:
-          name: bicep
-          path: ${{ env.TEMPLATE_FILE }}
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment: production
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: ./artifacts
-
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: Deploy Infrastructure
-        uses: azure/arm-deploy@v2
-        with:
-          subscriptionId: ${{ env.SUBSCRIPTION_ID }}
-          resourceGroupName: ${{ env.RESOURCE_GROUP }}
-          template: ./artifacts/bicep/webapp.bicep
-          parameters: 'webAppName=${{ env.WEBAPP_NAME }} location=${{ env.LOCATION }}'
-
-      - name: Deploy to Web App
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: ${{ env.WEBAPP_NAME }}
-          resource-group: ${{ env.RESOURCE_GROUP }}
-          package: ./artifacts/webapp/app.zip
+</Project>
